--- a/actions/python-gh-output/action.yml
+++ b/actions/python-gh-output/action.yml
@@ -20,7 +20,7 @@ runs:
       run: |
         import os
 
-        value = ${{ inputs.value }}
+        value = "${{ inputs.value }}"
 
         with open(os.environ['GITHUB_OUTPUT'], 'a') as fh:
             print(f'value={value}', file=fh)
