--- a/actions/python-gh-output/action.yml
+++ b/actions/python-gh-output/action.yml
@@ -20,10 +20,10 @@ runs:
       run: |
         import os
 
-        value = "${{ inputs.value }}"
+        to_output = "${{ inputs.value }}"
 
         with open(os.environ['GITHUB_OUTPUT'], 'a') as fh:
-            print(f'value={value}', file=fh)
+            print(f'value={to_output}', file=fh)
     - name: check output
       shell: bash
       run: echo "${{ steps.write-kv.outputs.value }}"
